adding requried api_token_scheme field to avoid assumptions regarding the auth header type

--- a/docs/configs/.ai-review.yaml
+++ b/docs/configs/.ai-review.yaml
@@ -65,6 +65,7 @@ llm:
     timeout: 120                        # Request timeout in seconds
     api_url: https://api.openai.com/v1  # Base URL of the provider API
     api_token: ${OPENAI_API_KEY}        # API token (set in env/CI variables)
+    api_token_scheme: Bearer            # Required only if api_token is set (e.g., Bearer, token, Basic)
 
     # --- Gemini ---
     # api_url: https://generativelanguage.googleapis.com
@@ -89,6 +90,7 @@ llm:
     # --- OpenRouter ---
     # api_url: https://openrouter.ai/api/v1
     # api_token: ${OPENROUTER_API_KEY}
+    # api_token_scheme: Bearer
 
     # --- Azure OpenAI ---
     # api_url: https://<your-resource>.openai.azure.com
@@ -147,18 +149,22 @@ vcs:
     # --- GitLab ---
     api_url: ${CI_SERVER_URL}       # Base GitLab server URL
     api_token: ${CI_JOB_TOKEN}      # Job token or personal access token
+    api_token_scheme: Bearer        # Required only if api_token is set (e.g., Bearer, token, Basic)
 
     # --- GitHub ---
     # api_url: https://api.github.com
     # api_token: ${GITHUB_TOKEN}      # GitHub Actions token or PAT
+    # api_token_scheme: Bearer
 
     # --- Bitbucket Cloud ---
     # api_url: https://api.bitbucket.org/2.0
     # api_token: ${BITBUCKET_TOKEN}   # App password or OAuth token
+    # api_token_scheme: Bearer
 
     # --- Bitbucket Server ---
     # api_url: https://bitbucket.mycompany.com/rest/api/1.0
     # api_token: ${BITBUCKET_SERVER_TOKEN}  # Personal access token or Basic Auth token (Base64)
+    # api_token_scheme: Bearer
 
     # --- Azure DevOps ---
     # api_url: https://dev.azure.com  # Base API endpoint for your organization
@@ -171,6 +177,7 @@ vcs:
     # --- Gitea ---
     # api_url: https://gitea.mycompany.com/api/v1
     # api_token: ${GITEA_TOKEN}       # Personal access token or CI token
+    # api_token_scheme: token
 
   # Pagination settings for API calls.
   pagination:
