--- a/docs/configs/.env.example
+++ b/docs/configs/.env.example
@@ -57,6 +57,7 @@ LLM__HTTP_CLIENT__VERIFY=true
 LLM__HTTP_CLIENT__TIMEOUT=120
 LLM__HTTP_CLIENT__API_URL=https://api.openai.com/v1
 LLM__HTTP_CLIENT__API_TOKEN=${OPENAI_API_KEY}
+LLM__HTTP_CLIENT__API_TOKEN_SCHEME=Bearer  # required only when LLM__HTTP_CLIENT__API_TOKEN is set
 
 # For Claude (only if provider=CLAUDE)
 # LLM__HTTP_CLIENT__API_URL=https://api.anthropic.com
@@ -100,6 +101,7 @@ VCS__HTTP_CLIENT__VERIFY=true
 VCS__HTTP_CLIENT__TIMEOUT=120
 VCS__HTTP_CLIENT__API_URL=${CI_SERVER_URL}
 VCS__HTTP_CLIENT__API_TOKEN=${CI_JOB_TOKEN}
+VCS__HTTP_CLIENT__API_TOKEN_SCHEME=Bearer  # required only when VCS__HTTP_CLIENT__API_TOKEN is set
 
 # --- GitHub ---
 # VCS__PROVIDER=GITHUB
@@ -160,6 +162,7 @@ VCS__HTTP_CLIENT__API_TOKEN=${CI_JOB_TOKEN}
 # VCS__HTTP_CLIENT__TIMEOUT=120
 # VCS__HTTP_CLIENT__API_URL=https://gitea.mycompany.com/api/v1
 # VCS__HTTP_CLIENT__API_TOKEN=${GITEA_TOKEN}
+# VCS__HTTP_CLIENT__API_TOKEN_SCHEME=token
 
 # --- Core ---
 CORE__CONCURRENCY=7
